# mg

./: CMakeLists.txt  GNUmakefile  Makefile  README  basic.c  buffer.c  cinfo.c  def.h  display.c  echo.c  file.c  funmap.c  hexmode.c  keymap.c  llm.c  main.c  meson.build  mg.1  paragraph.c  region.c  search.c  shell.c  term.c  ttyio.c  ttykbd.c  window.c  yank.c
